--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <style name="Theme.Taller3" parent="android:Theme.Material.Light.NoActionBar" />
+    <!-- Cambia el tema para que sea compatible con AppCompat -->
+    <style name="Theme.Taller3" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Personaliza los colores si lo deseas -->
+        <item name="colorPrimary">#6200EE</item>
+        <item name="colorPrimaryDark">#3700B3</item>
+        <item name="colorAccent">#03DAC5</item>
+    </style>
 </resources>
